2011-03-08  Jason Merrill  <jason@redhat.com>

	PR c++/45651
	* pt.c (instantiate_decl): Don't clear DECL_INTERFACE_KNOWN on
	!TREE_PUBLIC decls.

2011-03-08  Jason Merrill  <jason@redhat.com>

	PR c++/47289
	* pt.c (coerce_template_parms): Fix error recovery.

2011-03-08  Dodji Seketeli  <dodji@redhat.com>

	* name-lookup.c (binding_to_template_parms_of_scope_p): Only
	consider scopes of primary template definitions.  Adjust comments.

2011-03-08  Jason Merrill  <jason@redhat.com>

	PR c++/47488
	* mangle.c (write_template_arg_literal) [STRING_CST]: Sorry.

2011-02-03  Jonathan Wakely  <jwakely.gcc@gmail.com>

	PR c++/47589
	Backport from mainline
	2010-11-09  Jakub Jelinek  <jakub@redhat.com>

	PR c++/45894
	* tree.c (lvalue_kind): Don't crash if ref has NULL type.

2010-12-07  Jakub Jelinek  <jakub@redhat.com>

	Backport from mainline
	2010-11-20  Jakub Jelinek  <jakub@redhat.com>
 
	PR c++/46538
	* decl.c (cp_make_fname_decl): Return error_mark_node if
	current_binding_level has already sk_function_parms kind.

2010-10-01  Release Manager

	* GCC 4.4.5 released.

2010-09-02  Jakub Jelinek  <jakub@redhat.com>

	Backport from mainline
	2010-08-30  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/45423
	* parser.c (cp_parser_omp_atomic): Handle boolean
	{PRE,POST}_INCREMENT.

2010-08-29  Jason Merrill  <jason@redhat.com>

	PR c++/44991
	* parser.c (cp_parser_parameter_declaration): Pop parameter decls
	after tentative parsing.

2010-08-19  Jason Merrill  <jason@redhat.com>

	PR c++/45315
	* init.c (build_new_1): Don't use build_value_init in a template.

2010-06-29  Jason Merrill  <jason@redhat.com>

	PR c++/44587
	* pt.c (has_value_dependent_address): New.
	(value_dependent_expression_p): Check it.
	(convert_nontype_argument): Likewise.  Call decay_conversion before
	folding if we want a pointer.
	* semantics.c (finish_id_expression): Don't add SCOPE_REF if the
	scope is the current instantiation.

2010-06-22  Jakub Jelinek  <jakub@redhat.com>

	PR c++/44627